--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 body {
 background-image: url("images/city-background.jpg");
 background-color: #cccccc; 
@@ -20,7 +18,6 @@ background-size: cover;
     position: fixed; 
 }
 
->>>>>>> master
 .nav-wrapper {
     background-color: #1CA79A;
 }
@@ -28,38 +25,25 @@ background-size: cover;
     background-color: #1CA79A;
     width: 100%;
     margin: 0px;
+    padding: 10px;
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> master
 .brand-logo {
     margin-left: 20px;
     padding: 5px;
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> master
 .wrapper {
     width: 90%;
     max-width: 960px;
     margin: 0 auto;
     margin-top: 30px;
 }
-<<<<<<< HEAD
 
-#footText {
-    margin-left: 20px;
+.container {
+    width: 70%;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
-
-
-=======
-#footText {
-    margin-left: 20px;
-}
->>>>>>> master
 .collection-header {
     text-align: center;
 }
