--- a/style.css
+++ b/style.css
@@ -140,12 +140,15 @@ h2 {
 }
 #weather {
     padding: 5px; 
+        padding: 10px; 
+    }
+    
+#free {
+    background-color: #cccccc; 
 }
-
-
-
+   
     #event-div {
-        background-color: rgb(245, 245, 245, 1);
+        background-color: rgb(245, 245, 245);
         padding: 10px; 
         border-radius: 25px;
     }
